<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:text="@string/str_result"
        android:textSize="80sp"
        android:gravity="right"
        android:id="@+id/screen_result"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/str_result"
        android:textSize="30sp"
        android:gravity="right"
        android:id="@+id/screen_input"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="5">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:columnCount="3">

            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_return"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_delete"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_3"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_m_push"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_m_pop"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_2"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_parenthesis_l"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_parenthesis_r"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_1"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3">
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_4"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_9"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_0"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_5"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_8"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_pow"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_6"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_7"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_coma"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1">
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_sqrt"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_quotient"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_product"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1">
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:onClick="onClick"
                android:text="@string/str_btn_diff"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="85dp"
                android:layout_height="140dp"
                android:onClick="onClick"
                android:text="@string/str_btn_add"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2">
            <Button
                android:layout_width="85dp"
                android:layout_height="210dp"
                android:onClick="onClick"
                android:text="@string/str_btn_equal"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle"/>
        </GridLayout>
    </GridLayout>
</GridLayout>

